Update header animation + nav placement

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+  <!-- Animated Header -->
+  <header>
+    <div class="header-content">
+      <h1>ClaimWrit</h1>
+      <p>Personal Injury Demand Preparation</p>
+    </div>
+  </header>
+
+  <!-- Primary Navigation -->
   <nav>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
@@ -25,60 +34,52 @@
     </ul>
   </nav>
 
-  <header>
-    <div>
-      <h1>ClaimWrit</h1>
-      <p>Personal Injury Demand Preparation</p>
-    </div>
-  </header>
+  <main>
+    <!-- Tagline -->
+    <section class="section-centered">
+      <h2>Precision Demand-Letter Drafting &amp; Post-Settlement Support</h2>
+      <p>Your back-office ally for clarity, structure, and resolution.</p>
+    </section>
 
-  <section style="text-align:center; margin-top:2rem;">
-    <h2>Precision Demand-Letter Drafting &amp; Post-Settlement Support</h2>
-    <p>Your back-office ally for clarity, structure, and resolution.</p>
-  </section>
+    <!-- Core Values -->
+    <section class="section-centered">
+      <h2>Our Core Values</h2>
+      <p>ClaimWrit is built on expertise, precision, and trust—ensuring law firms receive litigation-ready demand letters that drive results efficiently.</p>
+    </section>
 
-  <section>
-    <h2 style="text-align:center;">Our Core Values</h2>
-    <p style="text-align:center; max-width:700px; margin:0.5rem auto;">
-      ClaimWrit is built on expertise, precision, and trust, ensuring law firms receive litigation-ready demand letters that drive results efficiently.
-    </p>
-    <div class="box">
-      <div class="box__right">clarity</div>
-      <div class="box__left">structure</div>
-      <div class="box__top">resolution</div>
-      <div class="box__bottom">ClaimWrit</div>
-      <div class="box__center">Hover from any side</div>
-    </div>
-  </section>
+    <!-- Value Proposition -->
+    <section class="section-centered">
+      <h2>What Sets Us Apart</h2>
+      <p><strong>✔ Strategic Demand-Letter Preparation &amp; Post-Settlement Reconciliation</strong><br>
+        Maximizing negotiating leverage with precise demand letters while streamlining lien resolution, expenses, and disbursements for faster case closures.
+      </p>
+      <p><strong>✔ HIPAA-Compliant Portal</strong><br>
+        Securely drag and drop medical records, billing ledgers, and lien documents with confidence.
+      </p>
+      <p><strong>✔ Efficiency-Driven Legal Support</strong><br>
+        We streamline pre-suit and post-settlement processes, helping law firms reduce administrative burdens and close cases faster.
+      </p>
+    </section>
 
-  <section style="max-width:900px; margin:3rem auto; text-align:center;">
-    <h2>What Sets Us Apart</h2>
-    <p><strong>✅ Strategic Demand-Letter Preparation &amp; Post-Settlement Reconciliation</strong><br>
-      Maximizing negotiating leverage with precise demand letters while streamlining lien resolution, expenses, and disbursements for faster case closures.
-    </p>
-    <p style="max-width:900px; margin:1rem auto;"><strong>✅ HIPAA-Compliant Portal</strong><br>
-      Securely drag and drop medical records, billing ledgers, and lien documents with confidence.
-    </p>
-    <p style="max-width:900px; margin:1rem auto;"><strong>✅ Efficiency-Driven Legal Support</strong><br>
-      We streamline pre-suit and post-settlement processes, helping law firms reduce administrative burdens and close cases faster.
-    </p>
-  </section>
+    <!-- Nationwide Support -->
+    <section class="section-alt section-centered">
+      <h2>Serving Law Firms Nationwide</h2>
+      <p>
+        ClaimWrit supports attorneys in all U.S. jurisdictions with litigation-ready demand letters, post-settlement medical reduction requests, and client balance verification—ensuring faster resolutions and stronger financial outcomes.
+      </p>
+    </section>
 
-  <section style="background:#f7f9fa; padding:3rem 0; text-align:center;">
-    <h2>Serving Law Firms Nationwide</h2>
-    <p style="max-width:800px; margin:0.5rem auto;">
-      ClaimWrit provides expert legal support across all U.S. jurisdictions, equipping attorneys with demand-letter precision, post-settlement medical reduction requests, and client balance verification—ensuring faster case resolutions with stronger financial outcomes.
-    </p>
-  </section>
+    <!-- Call to Action -->
+    <section class="section-centered">
+      <h2>Request a Sample Demand Letter</h2>
+      <p>
+        Experience our meticulous approach with a complimentary redacted demand letter—where precision drives results.
+      </p>
+      <a href="request-sample.html" class="cta-button">Request Sample Demand</a>
+    </section>
+  </main>
 
-  <section style="padding:3rem 0; text-align:center;">
-    <h2>Request a Sample Demand Letter</h2>
-    <p style="max-width:600px; margin:0.5rem auto 2rem;">
-      Experience our meticulous approach with a complimentary redacted demand letter—where precision drives results.
-    </p>
-    <a href="request-sample.html" class="cta-button">Request Sample Demand</a>
-  </section>
-
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 ClaimWrit LLC &middot; Fort Lauderdale, FL</p>
   </footer>
