INDEX AND STYLES UPDATE

--- a/index.html
+++ b/index.html
@@ -35,28 +35,35 @@
   </nav>
 
   <main>
-    <!-- Tagline -->
+    <!-- Hero / Tagline -->
     <section class="section-centered">
       <h2>Precision Demand-Letter Drafting &amp; Post-Settlement Support</h2>
       <p>Your back-office ally for clarity, structure, and resolution.</p>
     </section>
 
-    <!-- Core Values -->
+    <!-- Core Values & Hover Box -->
     <section class="section-centered">
       <h2>Our Core Values</h2>
       <p>ClaimWrit is built on expertise, precision, and trust—ensuring law firms receive litigation-ready demand letters that drive results efficiently.</p>
+      <div class="box">
+        <div class="box__right">clarity</div>
+        <div class="box__left">structure</div>
+        <div class="box__top">resolution</div>
+        <div class="box__bottom">ClaimWrit</div>
+        <div class="box__center">Hover from any side</div>
+      </div>
     </section>
 
-    <!-- Value Proposition -->
+    <!-- What Sets Us Apart -->
     <section class="section-centered">
       <h2>What Sets Us Apart</h2>
-      <p><strong>✔ Strategic Demand-Letter Preparation &amp; Post-Settlement Reconciliation</strong><br>
+      <p><strong>✅ Strategic Demand-Letter Preparation &amp; Post-Settlement Reconciliation</strong><br>
         Maximizing negotiating leverage with precise demand letters while streamlining lien resolution, expenses, and disbursements for faster case closures.
       </p>
-      <p><strong>✔ HIPAA-Compliant Portal</strong><br>
+      <p><strong>✅ HIPAA-Compliant Portal</strong><br>
         Securely drag and drop medical records, billing ledgers, and lien documents with confidence.
       </p>
-      <p><strong>✔ Efficiency-Driven Legal Support</strong><br>
+      <p><strong>✅ Efficiency-Driven Legal Support</strong><br>
         We streamline pre-suit and post-settlement processes, helping law firms reduce administrative burdens and close cases faster.
       </p>
     </section>
